@@ -19,8 +19,8 @@ sjp.frq(varCount, title = "", weightBy = NULL, weightByTitleString = NULL,
   meanInterceptLineType = 2, meanInterceptLineSize = 0.5,
   normalCurveColor = "red", normalCurveSize = 0.8, normalCurveAlpha = 0.4,
   axisTitle.x = NULL, axisTitle.y = NULL, autoGroupAt = NULL,
-  coord.flip = FALSE, vjust = "bottom", hjust = "center", na.rm = TRUE,
-  printPlot = TRUE)
+  coord.flip = FALSE, vjust = "bottom", hjust = "center",
+  y.offset = NULL, na.rm = TRUE, printPlot = TRUE)
 }
 \arguments{
 \item{varCount}{a vector of values (variable) describing the bars which make up the plot.}
@@ -194,6 +194,9 @@ labels. Allowed are same values as for \code{vjust} aesthetics from
 \code{ggplot2}: "left", "center", "right", "bottom", "middle", "top" and
 new options like "inward" and "outward", which align text towards and 
 away from the center of the plot respectively.}
+
+\item{y.offset}{numeric, offset for text labels when their alignment is adjusted 
+to the top/bottom of the geom (see \code{hjust} and \code{vjust}).}
 
 \item{na.rm}{logical, if \code{TRUE}, missings are not included in the frequency plot.}
 
